--- a/animationLogo.html
+++ b/animationLogo.html
@@ -7,6 +7,8 @@
     </head>
 
     <body>
-        <div></div>
+        <div>
+            <img class="image-animation" src="Saved images/723151.png"
+        </div>
     </body>
 </html>
