--- a/animationLogo.html
+++ b/animationLogo.html
@@ -2,13 +2,13 @@
 <html lang=en>
     <head>
         <meta charset=utf-8>
-        <link rel="stylesheet" type="text/css" href="css/animation.css">
+        <link rel="stylesheet" type="text/css" href="css/animationLogo.css">
         <title>My First animation</title>
     </head>
 
     <body>
         <div>
-            <img class="image-animation" src="Saved images/723151.png"
+            <img class="image-animation" src="Saved images/723151.png" alt="Your Image" width="250" height="220" alt="filter applied">
         </div>
     </body>
 </html>
